[FIX] mail: show more options in chat window header
Before this commit, chat window header showed all actions,
which made it quite bloated. The name of conversation was
sometimes completely truncated by available actions.

This commit fixes the issue by showing at most 2 actions
immediately in the chat window header. When there are more
actions, it shows an expandable more menu.

As a consequence of this change, when a panel is open, it
was harder to see the button to close the active panel
(toggling off the button).
To solve this issue, when a panel is open in chat window,
there's a floating button in the top-right corner of content
to close the panel.

Task-3334793

closes odoo/odoo#121981

Related: odoo/enterprise#41348

--- a/addons/mail/static/src/core_ui/thread.scss
+++ b/addons/mail/static/src/core_ui/thread.scss
@@ -21,10 +21,6 @@
     display: inline;
 }
 
-.o-mail-Thread-noPinnedPanel [data-oe-type="pin-menu"] {
-    display: none;
-}
-
 .o-mail-Thread-jumpPresent {
     background-color: mix(map-get($theme-colors, 'info'), $o-webclient-background-color, 5%);
     z-index: $o-mail-NavigableList-zIndex - 2;
